@@ -287,3 +287,7 @@
 	* Add ecore_thread_main_loop_begin and ecore_thread_main_loop_end.
 	Usefull to protect EFL call from another thread.
 
+2011-09-12  Mike Blumenkrantz
+
+        * Add ecore_con_server_fd_get, ecore_con_client_fd_get for manipulating
+          server file descriptors.
